unpackaged/main/default/objects/Hoist_Update__c/Hoist_Update__c.object-meta.xml
<CustomObject>
    <description>Used for Hoist weekly Updates</description>
    <label>Hoist Update</label>
    <nameField>
        <displayFormat>HOIST-{0000}</displayFormat>
        <label>Hoist Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hoist Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>