unpackaged/main/default/objects/Hoist_Update__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>