unpackaged/main/default/objects/Hoist_Update__c/fields/current_Payments_contract_expiry__c.field-meta.xml
<CustomField>
    <fullName>current_Payments_contract_expiry__c</fullName>
    <label>current Payments contract expiry</label>
    <type>Date</type>
</CustomField>