unpackaged/main/default/objects/Hoist_Update__c/fields/Current_Payments_provider_used__c.field-meta.xml
<CustomField>
    <fullName>Current_Payments_provider_used__c</fullName>
    <label>Current Payments provider used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>