unpackaged/main/default/objects/Hoist_Update__c/fields/current_POS_contract_expiry__c.field-meta.xml
<CustomField>
    <fullName>current_POS_contract_expiry__c</fullName>
    <label>current POS contract expiry</label>
    <type>Date</type>
</CustomField>