unpackaged/main/default/objects/Hoist_Update__c/fields/Current_POS_provider_used__c.field-meta.xml
<CustomField>
    <fullName>Current_POS_provider_used__c</fullName>
    <label>Current POS provider used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>