unpackaged/main/default/objects/Hoist_Update__c/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <length>100</length>
    <type>Text</type>
</CustomField>