unpackaged/main/default/objects/Hoist_Update__c/fields/Reason_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_on_Hold__c</fullName>
    <label>Reason on Hold</label>
    <length>100</length>
    <type>Text</type>
</CustomField>