unpackaged/main/default/objects/Hoist_Update__c/fields/UpsalesAccId__c.field-meta.xml
<CustomField>
    <fullName>UpsalesAccId__c</fullName>
    <label>UpsalesAccId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>