unpackaged/main/default/objects/Hoist_Update__c/fields/UpsalesOppId__c.field-meta.xml
<CustomField>
    <fullName>UpsalesOppId__c</fullName>
    <label>UpsalesOppId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>